# QMLDesktopAppTemplate

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md
.github/workflows/: builds_desktop_cross_platform.yml
CMake/: BuildThirdPartyProject.cmake
QMLDesktopAppTemplate/: CMakeLists.txt  main.cpp
QMLDesktopAppTemplate/CMake/: install.cmake
QMLDesktopAppTemplate/Headers/: AppSettings.h  QmlApplication.h
QMLDesktopAppTemplate/Headers/Common/: Singleton.h
QMLDesktopAppTemplate/Headers/Models/: SettingsModel.h  SettingsNode.h
QMLDesktopAppTemplate/Headers/Services/: Settings.h  Translator.h
QMLDesktopAppTemplate/Headers/Services/Logging/: ConsoleAppender.h  FileAppender.h  LogAppender.h  LogFormatter.h  LogMessage.h  Logger.h  SimpleFormatter.h
QMLDesktopAppTemplate/Sources/QML/: main.qml
QMLDesktopAppTemplate/Sources/Qt/: AppSettings.cpp  QmlApplication.cpp
QMLDesktopAppTemplate/Sources/Qt/Models/: SettingsModel.cpp  SettingsNode.cpp
QMLDesktopAppTemplate/Sources/Qt/Services/: Settings.cpp  Translator.cpp
QMLDesktopAppTemplate/Sources/Qt/Services/Logging/: ConsoleAppender.cpp  FileAppender.cpp  LogMessage.cpp  Logger.cpp  SimpleFormatter.cpp
QMLDesktopAppTemplate_Tests/: CMakeLists.txt  main.cpp
QMLDesktopAppTemplate_Tests/Headers/Models/: SettingsModelTest.h
QMLDesktopAppTemplate_Tests/Headers/Services/: SettingsTest.h
QMLDesktopAppTemplate_Tests/Headers/Services/Logging/: ConsoleAppenderTest.h  FileAppenderTest.h  LogMessageTest.h  LoggerTest.h  SimpleFormatterTest.h
QMLDesktopAppTemplate_Tests/Sources/Models/: AppSettingsTest.cpp  SettingsModelTest.cpp  SettingsNodeTest.cpp
QMLDesktopAppTemplate_Tests/Sources/Services/: SettingsTest.cpp
QMLDesktopAppTemplate_Tests/Sources/Services/Logging/: ConsoleAppenderTest.cpp  FileAppenderTest.cpp  LogMessageTest.cpp  LoggerTest.cpp
QML_Project/: CMakeLists.txt  main.cpp
QML_Project/CMake/: install.cmake
QML_Project/Headers/: ApiMacro.h  QmlApplication.h
QML_Project/Headers/Common/: NonCopyable.h  NonMoveable.h  Singleton.h
QML_Project/Headers/Models/: SettingsModel.h  SettingsNode.h
QML_Project/Headers/Services/: Settings.h  Translator.h
QML_Project/Headers/Services/Logging/: ConsoleAppender.h  FileAppender.h  LogAppender.h  LogFormatter.h  LogMessage.h  Logger.h  SimpleFormatter.h
QML_Project/Resources/TranslationsBU/: app_de.ts  app_en.ts
QML_Project/Sources/Qt/: QmlApplication.cpp
QML_Project/Sources/Qt/Models/: SettingsModel.cpp  SettingsNode.cpp
QML_Project/Sources/Qt/Services/: Settings.cpp  Translator.cpp
QML_Project/Sources/Qt/Services/Logging/: LogAppender.cpp  LogMessage.cpp  Logger.cpp  SimpleFormatter.cpp
QML_Project_Tests/: CMakeLists.txt  main.cpp
QML_Project_Tests/Headers/Models/: SettingsNodeTest.h
QML_Project_Tests/Headers/Services/Logging/: ConsoleAppenderTest.h
QML_Project_Tests/Sources/Models/: SettingsModelTest.cpp  SettingsNodeTest.cpp
QML_Project_Tests/Sources/Services/Logging/: ConsoleAppenderTest.cpp  FileAppenderTest.cpp  LogMessageTest.cpp  LoggerTest.cpp  SimpleFormatterTest.cpp
Scripts/: generate_compile_commands.sh
Scripts/Win/: build_and_deploy.sh  build_and_run_tests.sh  build_release.sh  build_script.sh
Scripts/Win/Helpers/: setup_python.sh  setup_qt.sh
